<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#222"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
    android:id="@+id/calculatorCard"
    android:layout_width="match_parent"
    android:layout_height="173dp"
    app:cardCornerRadius="10dp"
    android:layout_marginRight="30dp"
    android:layout_marginTop="20dp"
    android:layout_marginLeft="30dp">

    <LinearLayout
        android:background="@drawable/background1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/calc"
                    android:textColor="#ffffff"
                    android:textSize="24dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/calc_desc"
                    android:textColor="#ffffff"
                    android:textSize="14dp"
                    />



            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/calc"
                    android:layout_alignParentRight="true"
                    />

            </RelativeLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="y = mx + b"
                android:textSize="40dp"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:fontFamily="cursive"
                />


        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/todoCard"
        android:layout_width="match_parent"
        android:layout_height="173dp"
        app:cardCornerRadius="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp">

        <LinearLayout
            android:background="@drawable/background1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/todo"
                        android:textColor="#ffffff"
                        android:textSize="24dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/todo_desc"
                        android:textColor="#ffffff"
                        android:textSize="14dp"
                        />



                </LinearLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/todo"
                        android:layout_alignParentRight="true"
                        />

                </RelativeLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/todo_pizza"
                    android:textSize="40dp"
                    android:textColor="#ffffff"
                    android:fontFamily="cursive"
                    android:textStyle="bold"
                    />


            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/weatherCard"
        android:layout_width="match_parent"
        android:layout_height="173dp"
        app:cardCornerRadius="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp">

        <LinearLayout
            android:background="@drawable/background1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/weather"
                        android:textColor="#ffffff"
                        android:textSize="24dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/weather_desc"
                        android:textColor="#ffffff"
                        android:textSize="14dp"
                        />



                </LinearLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/weather"
                        android:layout_alignParentRight="true"
                        />

                </RelativeLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weather_cold"
                    android:textSize="36dp"
                    android:textStyle="bold"
                    android:textColor="#ffffff"
                    android:fontFamily="cursive"
                    />


            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>